Упрощены методы AnimalService, ReportService и ReportManager для записи фотографии животного.